change the border color for the upsale block and fix the spacing issue

--- a/frontend/src/global_styles/content/_widget_box.sass
+++ b/frontend/src/global_styles/content/_widget_box.sass
@@ -81,6 +81,7 @@ $widget-box--enumeration-width: 20px
 
     &--teaser-image
       width: 200px
+      margin: auto
 
     .widget-box--enumeration
       margin-left: 1.5rem
@@ -105,9 +106,8 @@ $widget-box--enumeration-width: 20px
 
     .widget-box--description
       display: grid
-      grid-template-columns: auto auto
+      grid-template-columns: auto 1fr
       grid-column-gap: 20px
-      margin-bottom: 20px
 
 .op-widget-box--header
   font-weight: bold
