--- a/frontend/src/global_styles/openproject/_homescreen.sass
+++ b/frontend/src/global_styles/openproject/_homescreen.sass
@@ -35,6 +35,8 @@
     
     &.upsale
       background: $spot-color-feedback-info-light
+      flex-basis: 100%
+      border-color: $spot-color-feedback-info-dark
 
 .controller-homescreen #breadcrumb
   display: none
